--- a/src/SFA.DAS.EAS.Web/comt-assets/css/screen-ie8.css
+++ b/src/SFA.DAS.EAS.Web/comt-assets/css/screen-ie8.css
@@ -4752,6 +4752,10 @@ h2 .float-right {
   margin: 7px 0 15px 0;
 }
 
+#search-form legend {
+  margin-bottom: 0;
+}
+
 #search-form .heading-medium {
   margin-top: 0;
 }
