--- a/src/SFA.DAS.EAS.Web/src/sass/_custom.scss
+++ b/src/SFA.DAS.EAS.Web/src/sass/_custom.scss
@@ -662,6 +662,7 @@ h2{
 
 #search-form{
 		margin:7px 0 15px 0;
+          legend{margin-bottom:0;}
         .heading-medium{margin-top:0;}
         .search-text{
            @include media(tablet) {width:262px;height:39px;}
